# word_counter

./: CMakeLists.txt  README.md  main.cpp  word_counter.cpp  word_counter.h
word_counter_lib/: CMakeLists.txt
word_counter_lib/include/: word_counter.h
word_counter_lib/src/: executor.cpp  executor.h  word_counter.cpp  word_counter_impl.cpp  word_counter_impl.h
